--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -45,26 +45,95 @@
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
 </section>
-<!-- PROJECTS LIST -->
+<!-- PORTFOLIO -->
 <!-- 
   1. Make project image boxes with heading below to fit to all devices
   2. Simulate headings similar to FCC template
-
 -->
-<section id="projects">
-  <h1 class="text-center portfolio" >Portfolio</h1>
-<div class="text-center" style="margin-top: 80px;">
-  <div class="container">
-    <div class="row row-cols-3">
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 1</p></a></div>
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 2</p></a></div>
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 3</p></a></div>
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 4</p></a></div>
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 5</p></a></div>
-      <div class="col"><a href="" class="link"><img src="coming_soon.png" width="400" height="400" alt="coming soon logo"><p id="project-heading">Project 6</p></a></div>
-    </div>
-  </div>
-</div>
+<section id="portfolio">
+  <div class="container ">
+      <h1 class="text-center portfolio-heading">Portfolio</h1>
+      <div class="row">
+          <div class="col-lg-4 mt-4">
+              <div class="card">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">YouTube Clone</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+              <div class="card portfolioContent">
+                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">Quiz App</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+              <div class="card portfolioContent">
+                  <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">Product Landing Page</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <br>
+      <div class="row">
+          <div class="col-lg-4 mt-4">
+              <div class="card portfolioContent">
+                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">Messaging Service</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+              <div class="card portfolioContent">
+                  <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">Twitter Clone</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+              <div class="card portfolioContent">
+                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                      <h4 class="card-title">Blog App</h4>
+                      <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                      <div class="text-center">
+                          <a href="#" class="btn btn-success">Link</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
 </section>
 <!-- CONTACT -->
 <section id="contact">
