--- a/responsive-web-design-projects/practice-portfolio/portfolio.html
+++ b/responsive-web-design-projects/practice-portfolio/portfolio.html
@@ -69,7 +69,7 @@
 
           <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Quiz App</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -82,7 +82,7 @@
 
           <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage3.jpg" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Product Landing Page</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -97,7 +97,7 @@
       <div class="row">
           <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Messaging Service</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -110,7 +110,7 @@
 
           <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage1.jpg" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Twitter Clone</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
@@ -123,7 +123,7 @@
 
           <div class="col-lg-4 mt-4">
               <div class="card portfolioContent">
-                  <img class="card-img-top" src="images/portfolioImage4.jpg" alt="Card image" style="width:100%">
+                  <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
                       <h4 class="card-title">Blog App</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
