--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -13,34 +13,47 @@
 </head>
 <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"></a>
+          <a class="navbar-brand name" href="#"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" id="nav-title" aria-current="page" href="#">About</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="nav-title" aria-current="page" href="#">Portfolio</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" id="nav-title" aria-current="page" href="#">Contact</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
+<!-- enable hidden navbar -->
+<script>
+  var prevScrollpos = window.pageYOffset;
+  window.onscroll = function() {
+    var currentScrollPos = window.pageYOffset;
+    if (prevScrollpos > currentScrollPos) {
+      document.getElementById("navbar").style.top = "0";
+    } else {
+      document.getElementById("navbar").style.top = "-50px";
+    }
+    prevScrollpos = currentScrollPos;
+  }
+</script>
       <!-- INTRODUCTION -->
       <!-- 
         1. Create an appealing background
         2. Create about me section (separate webpage)
        -->
-<section id="introduction">
-<div class="text-center">
+<section id="background">
+<div class="text-center introduction">
     <h1 id="heading">Hello my name is Arthur!</h1>
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
