--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -25,28 +25,16 @@
                 <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">Portfolio</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">Contact</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#contact">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
 <!-- enable hidden navbar -->
-<script>
-  var prevScrollpos = window.pageYOffset;
-  window.onscroll = function() {
-    var currentScrollPos = window.pageYOffset;
-    if (prevScrollpos > currentScrollPos) {
-      document.getElementById("navbar").style.top = "0";
-    } else {
-      document.getElementById("navbar").style.top = "-50px";
-    }
-    prevScrollpos = currentScrollPos;
-  }
-</script>
       <!-- INTRODUCTION -->
       <!-- 
         1. Create an appealing background
@@ -183,10 +171,6 @@
         Copyright © 2022 Arthur Thai. All rights reserved.  
       </div>
 </footer>
-
-
-
-
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
