--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -140,7 +140,7 @@
               <div class="card">
                   <img class="card-img-top" src="coming_soon.png" alt="Card image" style="width:100%">
                   <div class="card-body">
-                      <h4 class="card-title">Promodorro</h4>
+                      <h4 class="card-title">Promodoro</h4>
                       <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                       <div class="text-center">
                           <a href="#" class="btn btn-success">Link</a>
