--- a/responsive-web-design-projects/portfolio/portfolio.html
+++ b/responsive-web-design-projects/portfolio/portfolio.html
@@ -22,7 +22,7 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#">About</a>
+                <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#about">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active hover-red" id="nav-title" aria-current="page" href="#portfolio">Portfolio</a>
@@ -40,10 +40,8 @@
     <p class="text-center fst-italic" id="aspiring">An aspiring software engineer</p>
 </div>
 </section>
-<!-- ABOUT SECTION -->
-
 <!-- TIMELINE  -->
-<section>
+<section id="about">
  <div id="timeline-heading">
   <h1 class="portfolio-heading text-center">My timeline journey</h1>
  </div>
